# tiny-icf

./: .gitignore  ALL_FIXES_COMPLETE.md  ANALYSIS.md  API_METHOD_2_RESULTS.md  API_USAGE_SUMMARY.md  ARGUMENT_AGAINST_MAPPING.md  AUTO_START_SOLUTION.md  BATCH_TRAINING_GUIDE.md  BETTER_THAN_MAPPING.md  CODE_REVIEW.md  COMPLETE_IMPLEMENTATION.md  COMPLETE_STATUS.md  COMPLETE_SUMMARY.md  DATA_AND_MODELS.md  DATA_PREP.md  DESIGN_CRITIQUE.md  DESIGN_CRITIQUE_ENHANCED.md  DESIGN_CRITIQUE_FINAL.md  DESIGN_REVIEW.md  Dockerfile.batch  ENHANCED_TRAINING.md  EXPERIMENTS_COMPLETE.md  EXPERIMENTS_README.md  EXPERIMENT_RESULTS.md  FEATURES_AND_SCORES_ANALYSIS.md  FINAL_ANALYSIS.md  FINAL_AUTO_START.md  FINAL_IMPLEMENTATION.md  FINAL_IMPROVEMENTS.md  FINAL_PRODUCT_DECISION.md  FINAL_PROJECT_STATUS.md  FINAL_RESULTS.md  FINAL_STATUS.md  FIXES_APPLIED.md  FIXES_APPLIED_COMPLETE.md  FUN_PROJECT_PHILOSOPHY.md  GITHUB_SETUP.md  GOALS_AND_STRATEGY.md  GOALS_CRITIQUE_SUMMARY.md  GOALS_REFINED.md  (+50 more)
docs/typst/: README.md  ceiling_analysis.typ  design_philosophy.typ  loss_component_bounds.typ  multi_task_bounds.typ  problem_motivation.typ  technical_mathematical_description.typ  theoretical_foundations.typ
rust/: Cargo.toml  weights.json
rust/src/: main.rs
scripts/: .keep_core_scripts.txt  START_TRAINING.sh  __init__.py  add_modern_words.py  analyze_results.py  analyze_training_progress.py  auto_start_direct_ssh.py  auto_start_file_trigger.py  auto_start_simple.py  auto_start_via_autorun.py  auto_start_via_service.py  auto_start_working.py  autonomous_train.py  build_typst_docs.sh  complete_pipeline.sh  create_runpod_pod.sh  demo_text_reduction.py  demo_text_reduction_real.py  download_birkbeck_typos.py  download_data.sh  download_datasets.py  download_emoji_frequencies.py  download_github_typo_corpus.py  download_models.sh  download_multilingual.py  download_ngram_data.py  download_typo_corpus.py  evaluate_model.py  execute_via_mcp_api.py  expand_frequency_list.py  final_auto_start.py  find_real_typos_from_common_crawl.py  generate_larger_test_data.py  generate_test_data.py  mcp_autonomous_train.py  mcp_start_training.py  mcp_train.py  monitor_fast.py  monitor_training.py  monitor_training.sh  (+37 more)
src/tiny_icf/: __init__.py  augmentation.py  (+26 more)
tests/: __init__.py  conftest.py  test_eval.py  test_jabberwocky.py  test_model.py  test_properties.py  test_regression.py
